--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "@mui/material": "^5.1.1",
     "@mui/styles": "^5.1.1",
     "@mui/system": "^5.1.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.0",
+    "firebase": "^9.5.0",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-gauge-chart": "^0.4.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
