--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "chart.js": "^3.6.0",
     "firebase": "^9.5.0",
     "lottie-web": "^5.8.1",
     "react": "^17.0.2",
@@ -25,6 +24,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
