--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@emotion/styled": "^11.6.0",
     "@lottiefiles/react-lottie-player": "^3.4.1",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styles": "^5.1.1",
     "@mui/system": "^5.1.1",
+    "@mui/x-data-grid": "^5.2.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
